fixed image width on safari

--- a/main.css
+++ b/main.css
@@ -87,12 +87,8 @@ p {
   text-decoration: none;
 }
 
-.carousel__slide__details__button:hover {
-  cursor: pointer;
-}
-
 .carousel img {
-  
+  width: 100%;
   max-height: 600px;
   object-fit: cover;
   object-position: bottom;
